--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -50,6 +50,6 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="16dp"
-        android:src="@drawable/ic_play_arrow_white_24dp" />
+        android:src="@drawable/ic_play_arrow" />
 
 </RelativeLayout>
